--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "devDependencies": {
     "@parcel/transformer-sass": "2.9.3",
     "@types/node": "^20.8.3",
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "parcel-reporter-static-files-copy": "^1.5.3"
   },
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html && cp src/robots.txt dist/robots.txt"
+    "build": "parcel build src/index.html"
   }
 }
