--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
-    "@parcel/transformer-sass": "2.9.3",
     "@types/node": "^20.8.3",
-    "parcel": "^2.9.3",
-    "parcel-reporter-static-files-copy": "^1.5.3"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.11"
   },
   "scripts": {
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "start": "vite",
+    "build": "vite build"
   }
 }
