--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.8.3",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "typescript": "^5.2.2",
     "vite": "^4.4.11"
   },
   "scripts": {
     "start": "vite",
     "build": "vite build"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.8"
   }
 }
